Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- fix malformed URI reference for actions
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- splitting macro lib in progress
- Better layout and accessibility for
  subscriptions_lib_display_subscriptions_table.pt through the use of the new
  CPSDefault listing CSS class (closes #458).
- Better layout and wording for subscription options (closes #387).